--- a/css/sitecss.css
+++ b/css/sitecss.css
@@ -7,7 +7,7 @@
 }
 
 .hero-div {
-    height: 40em;
+    height: 45em;
     background-size: cover; background-image: url('../resources/server-room.jpg');
 }
 
@@ -19,6 +19,7 @@
     margin: auto;
     width: 45%;
     font-family: 'Comfortaa', cursive;
+    border: solid white 1px;
 }
 
 
